@@ -11,6 +11,7 @@
     * Added the following methods to the Sys::Time class.
       
       static method gettimeofday ($tv : Sys::Time::Timeval, $tz : Sys::Time::Timezone);
+      static method timersub : void ($a : Sys::Time::Timeval, $b : Sys::Time::Timeval, $res : Sys::Time::Timeval)
       
     * Added the Sys::Time::Timespec class.
     
